--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -83,6 +83,8 @@
       <!-- Footer -->
         <footer id="footer">
           <p class="copyright">&copy; Arteveldehogeschool Gent</p>
+
+          <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/" target="_blank"><img alt="Creative Commons-Licentie" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Dit werk valt onder een <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Naamsvermelding-NietCommercieel 4.0 Internationaal-licentie</a>.
         </footer>
 
     </div>
