--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,6 +11,6 @@
       </ul>
     </div>
     <span class="image object">
-      <img src="assets/images/HCD-beeld.png" alt="humancentereddesign" />
+      <img src="assets/images/hackathon1.jpg" alt="humancentereddesign" />
     </span>
   </section>
