--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
             <li><a href="{{ 'scope.html' | absolute_url }}">Scope</a></li>
-            <li><a href="#">Methodologie</a></li>
+            <li><a href="{{ 'methodologie.html' | absolute_url }}">Methodologie</a></li>
             <li>
               <span class="opener">Onderzoek</span>
               <ul>
