--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="{{ 'team.html' | absolute_url }}">Onderzoeksteam</a></li>
             <li><a href="{{ 'generic.html' | absolute_url }}">Pagina template 1</a></li>
-            <li><a href="{{ 'elements.html' | absolute_url }}">Pagina template 2</a></li>
+            <li><a href="{{ 'elements.html' | absolute_url }}">Pagina componenten</a></li>
           </ul>
         </nav>
 
