--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,8 @@
       <!-- Menu -->
         <nav id="menu">
           <header class="major">
-            <h2>Menu</h2>
+              <i class="icon icon-ahs"></i>
+            <h2>{{ site.title }}</h2>
           </header>
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
