update homepage intro

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,9 +5,9 @@
         <h1>Design meets research</h1>
         <p>User-centered “Graphic” Design en de nexus onderwijs onderzoek</p>
       </header>
-      <p>Grafische en Digitale Media is een opleiding met focus op het “maken” van media. Dat grafische media visueel aantrekkelijk en esthetisch verzorgd tot zelfs uitmuntend moeten zijn, is met het overaanbod aan communicatie een evidentie. Dat we als opleiding in de industriële wetenschappen en technologie ook de technische en technologische aspecten van mediaproductie ten volle beheersen, is niet meer dan normaal en is zelfs wat onze opleiding onderscheidt van kunst- en communicatieopleidingen. Echter, drukklare bestanden voor de meest geavanceerde print productie, volwaardige web toepassingen en technisch hoogstaande apps worden vandaag de dag slechts beschouwd als een “olympisch minimum”. Grafische media die niet aan deze twee voorwaarden voldoen, zijn gedoemd om te verdwijnen in het overaanbod.</p>
-      <ul class="actions">
-        <li><a href="#" class="button big">Learn More</a></li>
+      <p>De wereld is momenteel in transitie. Digitale media zijn bronnen van disruptie die bestaande modellen en structuren overhoop gooien. Om in die veranderende wereld blijvend betekenisvolle oplossingen voor problemen te kunnen produceren zijn we meer dan ooit genoodzaakt de mens/gebruiker centraal te zetten. Interdisciplinaire teams ontwerpen vandaag de dag nieuwe producten en diensten op maat van de gebruiker via collaboratieve processen. Deze “ontwerpmentaliteit” waarbij de gebruiker centraal staat wordt ook wel Design Thinking genoemd.</p>
+      <ul class="actions">G
+        <li><a href="intro" class="button big">Learn More</a></li>
       </ul>
     </div>
     <span class="image object">
