--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
             <li><a href="{{ '/scope' | absolute_url }}">Scope</a></li>
-            <li><a href="{{ 'intro.html' | absolute_url }}">Methodologie</a></li>
+            <li><a href="{{ '/intro' | absolute_url }}">Methodologie</a></li>
             <li>
               <span class="opener">Onderzoek</span>
               <ul>
@@ -37,8 +37,8 @@
               </ul>
             </li>
             <li><a href="{{ 'team.html' | absolute_url }}">Onderzoeksteam</a></li>
-            <li><a href="{{ 'generic.html' | absolute_url }}">Pagina template 1</a></li>
-            <li><a href="{{ 'elements.html' | absolute_url }}">Pagina componenten</a></li>
+            <li><a href="{{ '/generic' | absolute_url }}">Pagina template 1</a></li>
+            <li><a href="{{ '/elements' | absolute_url }}">Pagina componenten</a></li>
           </ul>
         </nav>
 
