--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
       </header>
       <p>De wereld is momenteel in transitie. Veel nieuwe digitale media zijn bronnen van disruptie die bestaande modellen, structuren en verwachtingspatronen overhoop gooien. Om in die veranderende wereld blijvend betekenisvolle oplossingen voor problemen te kunnen produceren zijn we meer dan ooit genoodzaakt de mens/gebruiker centraal te zetten. 
         Interdisciplinaire teams ontwerpen vandaag de dag nieuwe producten en diensten op maat van de gebruiker via collaboratieve processen. 
-        Deze “ontwerpmentaliteit” waarbij de gebruiker centraal staat wordt ook wel Design Thinking genoemd. 
+        Deze “ontwerpmentaliteit” waarbij de gebruiker centraal staat wordt ook wel Design Thinking genoemd. <br/><br/>
         Design Thinking kan evengoed worden ingezet voor het 'ontwerpen' van onderwijsprocessen waarbij de leerbehoeften en verwerking van de eindgebruiker, in dit geval de studenten, centraal staan.
         Voor GDM is Design Thinking in het bijzonder relevant niet alleen omdat het aansluit bij een nieuwe trend in het werkveld, maar dus ook omdat het kan aangewend worden om creatieve en efficiënte oplossingen te ontwikkelen voor onderwijs, onderzoek en dienstverlening</p>
       <ul class="actions">
