--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,12 +22,12 @@
             <li>
               <span class="opener">Onderzoek</span>
               <ul>
-                <li><a href="{{ 'kwalitatief.html' | absolute_url }}">Kwalitatief</a></li>
-                <li><a href="{{ 'kwantitatief.html' | absolute_url }}">Kwantitatief</a></li>
+                <li><a href="{{ '/kwalitatief' | absolute_url }}">Kwalitatief</a></li>
+                <li><a href="{{ '/kwantitatief' | absolute_url }}">Kwantitatief</a></li>
               </ul>
             </li>
-            <li><a href="{{ 'inzichten.html' | absolute_url }}">Inzichten</a></li>
-            <li><a href="{{ 'verbetering.html' | absolute_url }}">Ideeën tot verbetering</a></li>
+            <li><a href="{{ '/inzichten' | absolute_url }}">Inzichten</a></li>
+            <li><a href="{{ '/verbetering' | absolute_url }}">Ideeën tot verbetering</a></li>
             <li>
               <span class="opener">Tools</span>
               <ul>
@@ -36,7 +36,7 @@
                 <li><a href="#">Coming soon</a></li>
               </ul>
             </li>
-            <li><a href="{{ 'team.html' | absolute_url }}">Onderzoeksteam</a></li>
+            <li><a href="{{ '/team' | absolute_url }}">Onderzoeksteam</a></li>
             <li><a href="{{ '/generic' | absolute_url }}">Pagina template 1</a></li>
             <li><a href="{{ '/elements' | absolute_url }}">Pagina componenten</a></li>
           </ul>
