--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,8 +12,7 @@
       <!-- Menu -->
         <nav id="menu">
           <header class="major">
-              <i class="icon icon-ahs"></i>
-            <h2>{{ site.title }}</h2>
+            <h2><i class="icon icon-ahs"></i> {{ site.title }}</h2>
           </header>
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
