--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
       <!-- Menu -->
         <nav id="menu">
           <header class="major">
-            <h2><i class="icon icon-ahs"></i> {{ site.title }}</h2>
+            <h2>{{ site.title }}</h2>
           </header>
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
@@ -36,7 +36,6 @@
               </ul>
             </li>
             <li><a href="{{ '/team' | absolute_url }}">Onderzoeksteam</a></li>
-            <li><a href="{{ '/generic' | absolute_url }}">Pagina template 1</a></li>
             <li><a href="{{ '/elements' | absolute_url }}">Pagina componenten</a></li>
           </ul>
         </nav>
