--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -9,7 +9,8 @@
 	#header {
 		@include vendor('display', 'flex');
 		border-bottom: solid 5px _palette(accent);
-		padding: 6em 0 1em 0;
+		$pad: 1.5em / 0.9;
+		padding: $pad 0 0.5em;
 		position: relative;
 
 		> * {
@@ -29,11 +30,9 @@
 		}
 
 		@include breakpoint(xlarge) {
-			padding-top: 5em;
 		}
 
 		@include breakpoint(small) {
-			padding-top: 6.5em;
 
 			.logo {
 				font-size: 1.25em;
