--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -150,7 +150,7 @@
 			}
 		}
 
-		@include breakpoint(large) {
+		@include breakpoint(medium) {
 			box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
 			height: 100%;
 			left: 0;
