--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,32 +12,31 @@
       <!-- Menu -->
         <nav id="menu">
           <header class="major">
-            <h2>{{ site.title }}</h2>
+            <h2>Het onderzoek</h2>
           </header>
           <ul>
-            <li><a href="{{ '/' | absolute_url }}">Homepage</a></li>
+            <li><a href="{{ '/' | absolute_url }}">Introductie</a></li>
             <li><a href="{{ '/scope' | absolute_url }}">Scope</a></li>
-            <li><a href="{{ '/intro' | absolute_url }}">Methodologie</a></li>
-            <li>
-              <span class="opener">Onderzoek</span>
-              <ul>
-                <li><a href="{{ '/kwalitatief' | absolute_url }}">Kwalitatief</a></li>
-                <li><a href="{{ '/kwantitatief' | absolute_url }}">Kwantitatief</a></li>
-              </ul>
-            </li>
+            <li><a href="{{ '/kwalitatief' | absolute_url }}">Kwalitatief onderzoek</a></li>
+            <li><a href="{{ '/kwantitatief' | absolute_url }}">Kwantitatief onderzoek</a></li>
             <li><a href="{{ '/inzichten' | absolute_url }}">Inzichten</a></li>
             <li><a href="{{ '/verbetering' | absolute_url }}">Ideeën tot verbetering</a></li>
-            <li>
-              <span class="opener">Tools</span>
-              <ul>
-                <li><a href="#">Coming soon</a></li>
-                <li><a href="#">Coming soon</a></li>
-                <li><a href="#">Coming soon</a></li>
-              </ul>
-            </li>
             <li><a href="{{ '/team' | absolute_url }}">Onderzoeksteam</a></li>
-            <li><a href="{{ '/elements' | absolute_url }}">Pagina componenten</a></li>
+
           </ul>
+
+          <header class="major">
+            <h2>Methodologie &amp; tools</h2>
+          </header>
+          <ul>
+            <li><a href="{{ '/methodologie' | absolute_url }}">Human Centered Design</a></li>
+
+            <li><a href="{{ '/tools-discover' | absolute_url }}">Discover</a></li>
+            <li><a href="{{ '/tools-define' | absolute_url }}">Define</a></li>
+            <li><a href="{{ '/tools-ideate' | absolute_url }}">Ideate</a></li>
+            <li><a href="{{ '/tools-prototype' | absolute_url }}">Prototype</a></li>
+            
+        </ul>
         </nav>
 
       <!-- Section -->
