--- a/_sass/layout/_menu.scss
+++ b/_sass/layout/_menu.scss
@@ -15,7 +15,7 @@
 			letter-spacing: _font(kerning-heading);
 			list-style: none;
 			margin-bottom: 0;
-			padding: 0;
+			padding: 1em 0 2em;
 			text-transform: uppercase;
 
 			a, span {
