--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,10 +16,11 @@
 
                 <!-- Content -->
                 <section>
-                	<header class="main">
+                    {% if page.title %}
+                    <header class="main">
                 		<h1>{{ page.title }}</h1>
                 	</header>
-
+                    {% endif %}
                   {% if page.image %}
                 	<span class="image main"><img src="{{ page.image | absolute_url }}" alt="" /></span>
                   {% endif %}
