--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
           </header>
           <ul>
             <li><a href="{{ '/' | absolute_url }}">Introductie</a></li>
-            <li><a href="{{ '/scope' | absolute_url }}">Scope</a></li>
+            <li><a href="{{ '/scope' | absolute_url }}">Achtergrond</a></li>
             <li><a href="{{ '/kwalitatief' | absolute_url }}">Kwalitatief onderzoek</a></li>
             <li><a href="{{ '/kwantitatief' | absolute_url }}">Kwantitatief onderzoek</a></li>
             <li><a href="{{ '/inzichten' | absolute_url }}">Inzichten</a></li>
