--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,8 @@
             <li><a href="{{ '/scope' | absolute_url }}">Achtergrond</a></li>
             <li><a href="{{ '/kwalitatief' | absolute_url }}">Kwalitatief onderzoek</a></li>
             <li><a href="{{ '/kwantitatief' | absolute_url }}">Kwantitatief onderzoek</a></li>
-            <li><a href="{{ '/inzichten' | absolute_url }}">Inzichten</a></li>
+            <li><a href="{{ '/inzichten-1' | absolute_url }}">Inzichten 1ste jaar</a></li>
+            <li><a href="{{ '/inzichten-2' | absolute_url }}">Inzichten 2de en 3de jaar</a></li>
             <li><a href="{{ '/verbetering' | absolute_url }}">Ideeën tot verbetering</a></li>
             <li><a href="{{ '/team' | absolute_url }}">Onderzoeksteam</a></li>
 
