--- a/_sass/components/_features.scss
+++ b/_sass/components/_features.scss
@@ -34,7 +34,7 @@
 				margin-bottom: 0;
 			}
 
-			.icon {
+			img, .icon {
 				@include vendor('flex-grow', '0');
 				@include vendor('flex-shrink', '0');
 				display: block;
@@ -64,6 +64,10 @@
 					top: 50%;
 					width: 7em;
 				}
+			}
+
+			img.profile {
+				border-radius: 50%;
 			}
 
 			.content {
