--- a/_sass/components/_features.scss
+++ b/_sass/components/_features.scss
@@ -34,7 +34,8 @@
 				margin-bottom: 0;
 			}
 
-			img, .icon {
+			img, .fal {
+				
 				@include vendor('flex-grow', '0');
 				@include vendor('flex-shrink', '0');
 				display: block;
@@ -43,6 +44,7 @@
 				margin: 0 _size(element-margin) 0 0;
 				text-align: center;
 				width: 10em;
+				position: relative;
 
 				&:before {
 					color: _palette(accent);
@@ -106,7 +108,7 @@
 					margin-bottom: 0;
 				}
 
-				.icon {
+				.fal {
 					height: 8em;
 					line-height: 8em;
 					width: 8em;
@@ -129,7 +131,7 @@
 				@include vendor('flex-direction', 'column');
 				@include vendor('align-items', 'flex-start');
 
-				.icon {
+				.fal {
 					height: 6em;
 					line-height: 6em;
 					margin: 0 0 (_size(element-margin) * 0.75) 0;
@@ -150,7 +152,7 @@
 
 		@include breakpoint(xsmall) {
 			article {
-				.icon {
+				.fal {
 					&:before {
 						font-size: 1.25rem;
 					}
